# repomix

./: .coverage  .gitignore  PRD-Architecture-Diamant-Verses.md  STRATUM_RELAY.md  beta_testing.db  brain_bypass_verse.py  cache.db  fluence_bypass_verse.py  llm_catalog.db  marketplace_phase4_week1.py  marketplace_phase4_week2.py  marketplace_phase4_week3.py  marketplace_phase4_week4.py  migration_phase1.py  migration_phase2.py  migration_phase2_weeks34.py  neuro_symbolic_verse_engine.py  ontology_registry.json  physic_verse.py  test_phase3_performance.py  verse-template-generator.py  verse_auto_projection.py  verse_detector.py  verse_spiral_implementations.py  verses_creative_foundation.py  verses_library.json  verses_library.py  verses_marketplace.db  wazaa_bypass_verse.js  world_verse.py
.swarm/: node.yaml
.test_blo_cache/: .cache_metadata.json  BLO_TEST_1.json  BLO_TEST_2.json  BLO_TEST_VERSE.json  DEP_BLO_TEST_1_0.json  DEP_BLO_TEST_1_1.json  DEP_BLO_TEST_1_2.json  DEP_BLO_TEST_2_0.json  DEP_BLO_TEST_2_1.json  DEP_BLO_TEST_2_2.json  DEP_BLO_TEST_VERSE_0.json  DEP_BLO_TEST_VERSE_1.json  DEP_BLO_TEST_VERSE_2.json
.test_cache/: .cache_metadata.json  DEP_TEST_VERSE_0_0.json  DEP_TEST_VERSE_0_1.json  DEP_TEST_VERSE_0_2.json  DEP_TEST_VERSE_1_0.json  DEP_TEST_VERSE_1_1.json  DEP_TEST_VERSE_1_2.json  DEP_TEST_VERSE_2_0.json  DEP_TEST_VERSE_2_1.json  (+32 more)
lecun_autosupervision_verse/: __init__.py  autosupervision_engine.py  demo_autosupervision.py  pyproject.toml
poincare_topology_verse/: README.md  __init__.py  demo_topology.py  pyproject.toml  topology_engine.py
(+443 files in other folders)
